# tock

./: .gitignore  README.md  gradle.properties  pom.xml  settings.gradle.kts
aws-tools/: pom.xml
bot/: pom.xml
dokka/: pom.xml
gen-ai/: pom.xml
llm/indexingtools/: index_documents.py  pyproject.toml  smarttribune_formatter.py  webscraper.py
llm/indexingtools/tests/: embeddings.json  formatter_output_documents.csv  test_output_documents.csv  webscraper_output_documents.csv
llm/orchestrator-server/src/main/python/app/: .pre-commit-config.yaml  README.md  pyproject.toml
llm/orchestrator-server/src/main/python/app/src/app/: dependencies.py  main.py
llm/orchestrator-server/src/main/python/app/src/app/exceptions/: ErrorCode.py  FunctionalException.py
llm/orchestrator-server/src/main/python/app/src/app/models/: answers.py  chat.py  footnotes.py
llm/orchestrator-server/src/main/python/app/src/app/routers/: chat.py  dependencies.py  healthcheck.py  llm.py
llm/orchestrator-server/src/main/python/app/src/llm_orchestrator/: .env  dependencies.py  main.py  settings.py
llm/orchestrator-server/src/main/python/app/src/llm_orchestrator/errors/: error_factories.py  error_messages.py
llm/orchestrator-server/src/main/python/app/src/llm_orchestrator/exceptions/: ErrorMessage.py  FunctionalException.py  business_exception.py  error_code.py  exception_handlers.py
llm/orchestrator-server/src/main/python/app/tests/: test_configurations.py  test_em_providers_router.py  test_errors.py  test_exception_handlers.py  test_generate_sentences_router.py  test_langchain_callbacks.py  test_langchain_factory.py  test_llm_providers_router.py  test_rag_chain.py
(+1983 files in other folders)
